# peddle-research

./: .env.example  .gitignore  DATA.md  Makefile  README.md  pyproject.toml
configs/: agent.yaml  construction.yaml  construction_v2.yaml  construction_v2_image.yaml  eval.yaml  personas.yaml  runpod_vllm.yaml  scoring.yaml  scoring_predictor.yaml  scraping.yaml  sweep_plans.yaml  sweep_plans_probe.yaml  training.yaml  training_v2.yaml  training_v2_gemma_native.yaml  training_v2_qwen.yaml
configs/filters/: _index.yaml  facebook.yaml  meta.yaml  pinterest.yaml  reddit.yaml  tiktok.yaml  x.yaml
configs/smoke/: construction_v2.anthropic.yaml  construction_v2.gemini.yaml  construction_v2.openai.yaml
docs/api/: ADFLEX.md
docs/project/: AGENT_ARCHITECTURE.md  CONSTRUCTION_ARCHITECTURE.md  CONSTRUCTION_GUIDE.md  CONSTRUCTION_V2_ARCHITECTURE.md  DRAPER_DATA_SOURCES.md  EVAL_METHODOLOGY_FIX.md  HUMAN_EVAL_STUDY_PLAN.md  IMAGE_BRIEF_COPY_TO_IMAGE_REDESIGN.md  IMPLEMENTATION_PLAN.md  MAUVE_INTEGRATION_PLAN.md  TEMPLATES_REFERENCE.md  TRAINING_ARCHITECTURE.md
docs/training/: TRAINING_RUN_001_POSTMORTEM.md  TRAINING_RUN_002_POSTMORTEM.md  TRAINING_RUN_003_POSTMORTEM.md
scripts/: ablate_smoke.sh  collect.py  construct.py  construct_v2.py  eval.py  predict.py  score.py  scrape.py  serve_scoring_predictor.py  tail_train_metrics.py  train.py  train_cloud.sh  train_cloud_bg.sh  train_v2_bakeoff.sh  upload_to_pod.sh
scripts/assessment/: heuristic_classifier.py  profanity_filter.py  review_examples.py  test_heuristic_classifier.py  test_profanity_filter.py
scripts/construct_v2/: render_for_gemma.py
scripts/diagnostics/: agent_smoke.py  inference_tui.py  inspect_traces.py  smoke_normalize.py
scripts/explore/: _caption_leak_audit.py  adflex_explore.py  captioning_smoke.py  convert_litreview_to_peerj.py  diagnose_claude_rejects.py  image_brief_funnel.py  image_brief_url_probe.py  poll_single_pass_smoke.py  render_single_pass_md.py  run100_costs.py  scorer_control_realads.py  scorer_robustness_probe.py  single_pass_smoke.py  structural_drops_audit.py
scripts/live_deploy/: analyze.py  briefs.draper_launch.json  briefs.example.json  briefs.prosodylang.json  briefs.test_pack.json  generate_ads.py
scripts/ops/: backfill_v2_labels.py  enrich_language.py  extract_filters.py  label_content_safety.py  label_verticals.py  salvage_pipe_campaign_clean.py  validate.py
scripts/thesis/: add_canonical_refs.py  add_deployment_figure_sentences.py  add_figure_callouts.py  apply_ch2_consolidation.py  apply_ch2_transitions.py  apply_issue5_critiques.py  apply_issue5_touches.py  apply_issue8_table_comparison.py  apply_reviewer6_fixes.py  apply_template_format_fixes.py  apply_tone_and_limitations.py  audit_3_drift_and_citations.py  audit_4_drift_and_citations.py  build_approval_page.py  build_summary_doc.py  check_fields.py  consolidate_redundancy.py  dump_4_4_templates.py  dump_cite_context.py  dump_img_and_counts.py  dump_ref_list.py  dump_renumber_targets.py  embed_prisma_figure.py  explore_refmetrics_data.py  fill_3_8_8_body.py  fill_4_2_numbers.py  finalize_peerj.py  fix_3_8_formatting.py  fix_chapter1_page_numbering.py  fix_equations_omml.py  fix_floating_figures.py  fix_lists_refresh.py  fix_structure_1_titles.py  fix_structure_2_outline_levels.py  fix_structure_3_refresh_fields.py  fix_tof_entry.py  generate_figures_4_2.py  generate_figures_4_3.py  generate_figures_4_4.py  generate_figures_4_4_refoverlap.py  (+70 more)
tests/collection/: test_sweep.py
tests/construction/: test_bundle.py  test_clusterer.py  test_construction_schemas.py  test_copywriting_dice.py  test_dataset_builder.py  test_dice_and_ingestion.py  test_difficulty.py  test_provider_rotation.py  test_quality_filter.py  test_religious_scripture.py  test_rubrics.py  test_source_selector.py
tests/construction_v2/: conftest.py  test_brief_extractor.py  test_brief_schema.py  test_captions_builder.py  test_config.py  test_dataset_builder.py  test_factory_validate.py  test_fidelity.py  test_image_brief.py  test_ingest_responses.py  test_ingest_skills.py  test_leak_guard.py  test_pipeline_collect.py  test_platform_labels.py  test_quality_filter.py  test_rationale_prompt.py  test_response_parser.py  test_single_pass.py  test_source_selector.py
tests/contract/: brief_serialization.json  test_brief_serialization.py  test_static_system_prompt.py
tests/evaluation/: test_eval_pipeline.py  test_extract.py  test_gold.py  test_mauve_scorer.py  test_proxy_validation.py  test_reference_metrics.py  test_similarity.py  test_upworthy_loader.py
tests/scoring/: test_composite_scorer.py  test_survival.py  (+1 more)
(+147 files in other folders)
