[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draper"
version = "0.1.0"
description = "Creative copywriting fine-tuning pipeline: collection, scoring, backtranslation construction, and QLoRA training"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    # Scraping
    "trafilatura>=1.8",
    "apify-client>=1.6",
    "langdetect>=1.0",
    # Statistics
    "scipy>=1.12",
    "lifelines>=0.27",
    "snorkel>=0.10",
    # BigQuery client for Google Political Ads validation dataset
    "google-cloud-bigquery>=3.20",
    # Data
    "polars>=1.0",
    "pyarrow>=15.0",
    "datasets>=2.18",
    # LLM clients
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    # Semantic vertical classification
    "sentence-transformers>=3.0",
    # Env
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "types-PyYAML>=6.0",
]
# QLoRA fine-tuning stack (Phase 3). Pulled in only when actually training —
# avoids dragging torch into frontend / scraping environments.
#
# Version pins reflect the environment used for Run #001 + local ablation
# (2026-04-30). TRL and Unsloth are pinned tight: Run #001 collapsed on
# trl 0.24 + unsloth 2026.4.8 with padding_free + liger; we want the same
# code path for repro and won't drift off it without a re-validation. Other
# packages stay loose because they're not load-bearing for the bug.
training = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate>=1.0",
    "peft>=0.13",
    "trl>=0.24,<0.25",
    "bitsandbytes>=0.44",
    "unsloth>=2026.4,<2026.5",
    "trackio>=0.1",
    "liger-kernel>=0.5,<0.6",
    "huggingface-hub>=0.26",
]
# Scoring-predictor (Phase 1 — text-only regressor on the v3 corpus). Lives
# in its own extra so that environments that only need the eval pipeline or
# the scraping stack don't pay the torch/transformers install cost.
scoring-predictor = [
    "torch>=2.5",
    "transformers>=4.46",
    "tokenizers>=0.20",
    "safetensors>=0.4",
    "accelerate>=1.0",
    "scikit-learn>=1.4",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# MAUVE distribution-matching eval arm. Pulls GPT-2-large for featurization
# plus the mauve-text library. Torch/transformers pins match the
# scoring-predictor extra so `uv sync --extra mauve --extra scoring-predictor`
# resolves to a single coherent stack.
mauve = [
    "mauve-text>=0.4.0",
    "torch>=2.5",
    "transformers>=4.46",
]
# Reference-overlap eval arm (BLEU / chrF / ROUGE-L / METEOR / BERTScore vs the
# GOLD ad + a multi-ref pool). sacrebleu + nltk are light; bert-score pulls
# torch + roberta-large. Torch/transformers pins match the mauve / scoring-
# predictor extras so `uv sync` across them resolves to one coherent stack.
# ROUGE-L reuses the in-repo implementation, so no rouge-score dep is needed.
refmetrics = [
    "sacrebleu>=2.4",
    "nltk>=3.8",
    "bert-score>=0.3.13",
    "torch>=2.5",
    "transformers>=4.46",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["^archive/"]

[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "apify_client.*",
    "polars.*",
    "scipy.*",
    "google.cloud.*",
    "lifelines.*",
    "snorkel.*",
    "langdetect.*",
    "sklearn.*",
    "datasets.*",
    "sentence_transformers.*",
    # Training stack — many of these ship without py.typed
    "torch.*",
    "transformers.*",
    "accelerate.*",
    "peft.*",
    "trl.*",
    "bitsandbytes.*",
    "unsloth.*",
    "trackio.*",
    "tokenizers.*",
    "safetensors.*",
    "mauve.*",
    "sacrebleu.*",
    "nltk.*",
    "bert_score.*",
]
ignore_missing_imports = true
# sacrebleu ships py.typed but doesn't re-export BLEU/CHRF from sacrebleu.metrics
# via __all__; allow implicit re-export so the refmetrics arm imports cleanly
# under strict mode (harmless for the other third-party modules above).
implicit_reexport = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["archive"]
